--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <title>index</title>
 </head>
 <body>
-    <a href="./rest/greeting">Greeting</a> <br/>
+    <a href="./greeting">Greeting</a> <br/>
     <a href="./calculator.html">Calculator</a>
 </body>
 </html>
